# ddd-rs

./: Cargo.toml
ddd/: Cargo.toml
ddd-codegen/: Cargo.toml
ddd-codegen/src/: aggregate_root.rs  event.rs  lib.rs  type_validation.rs
ddd/src/: aggregate_root.rs  core.rs  event.rs  lib.rs
